--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <body>
     <header class="page-header">
       <div class="container">
-      +79819466590 <br>
-    <a href="mailto:666_kirushka_666@mail.ru">666_kirushka_666@mail.ru</a>
+     <a class="header-phone" href="tel:+79819466590">+7 981 946 65 90</a> <br>
+    <a class="header-email" href="mailto:666_kirushka_666@mail.ru">666_kirushka_666@mail.ru</a>
       </div>
     </header>
 
@@ -25,19 +25,34 @@
     <section class="intro">
       <div class="container">
         <h2 class="subheading">Давайте познакомимся</h2>
+        <figure class="user-image">
+          <img src="source/1234.jpg" width="500" alt="Фото образец">
+        </figure>
         <h3>Пара слов о себе</h3>
-          <p>Текст с парой слов о себе.</p>
+          <p>Я Есть Он.</p>
         <h3>Чем могу быть полезен</h3>
-          <p>Текст о том, чем могу быть полезен.</p>
+          <p>Всем.</p>
+      <div class="skills">
+        <h3>Мои навыки</h3>
+          <dl class="skills-list">
+            <dt class="skill-html">HTML</dt>
+              <dd class="level"><div style="width: 60%">60%</div></dd>
+            <dt class="skill-css">CSS</dt>
+              <dd class="level"><div style="width: 40%">40%</div></dd>
+          </dl>
+        </div>
       </div>
     </section>
 
     <section class="portfolio">
       <div class="container">
         <h2 class="subheading">Мои работы</h2>
+        <figure class="project-image"><img src="source/project.jpg" width="928" height="536" alt="Скрин проекта"></figure>
 
         <h3>Сайт инструктора Кекса</h3>
-          <p>Небольшой лендинг о школе для начинающих.</p>
+          <p>Моя первая работа во время самостоятельного обучения.</p>
+          <a class="button" href="source/project/index.html">Открыть страницу</a>
+
 
         <h3>Блог начинающего верстальщика</h3>
           <p>Статический блог про обучение HTML и CSS.</p>
@@ -46,8 +61,8 @@
 
     <footer class="page-footer">
       <div class="container">      
-       +79819466590 <br>
-    <a href="mailto:666_kirushka_666@mail.ru">666_kirushka_666@mail.ru</a>
+       <a class="footer-phone" href="">+7 981 946 65 90 </a> <br>
+    <a class="footer-email" href="mailto:666_kirushka_666@mail.ru">666_kirushka_666@mail.ru</a>
       </div>
     </footer>
   </body>
